proj1/tests/other-tests/MINZ_tests/correct/operator_test2.py
a = ((10 - 5) ** (4 // 3)) % 3 - 20
print a
