proj1/tests/other-tests/MINZ_tests/error/operators_bad2.py
b = (10 - 5) ** (4 // 3)) % 3 - 20
